--- a/_quarto.yml
+++ b/_quarto.yml
@@ -78,6 +78,7 @@ book:
       - ica/ica-sample1.qmd
       - ica/ica-sample2.qmd
       - ica/cleaning.qmd
+      - 03-adv-ggplot-notes.qmd
 
     - part: "Extras"
       chapters:
